Fix active navbar item appearance on Safari

--- a/assets/stylesheets/shared/header.css.scss
+++ b/assets/stylesheets/shared/header.css.scss
@@ -119,6 +119,10 @@
       &:hover {
         background: none;
       }
+
+      &.active {
+        display: block;
+      }
     }
   }
 
